MechSite - Version 0.3 - 13/04/2021 Aggiunti: -Pagina "Aggiunta Riparazioni"; -Completato "Storico" con aggiunta delle riparazioni -Creata pagina "Gestionale" -Creata pagina "Riparazioni" (Riparazioni in corso) -Sistemato funzionamento fusoorario per inserimento nel db

--- a/templates/riparazioni.html
+++ b/templates/riparazioni.html
@@ -1,6 +1,32 @@
 {% extends "template.html" %}
-{% block title%}Login{% endblock %}
+{% block title%}Riparazioni{% endblock %}
 {% block pagecontent %}
-<h1>Pagina di Login ciaooo</h1>
-<p>ciao</p>
+<h1>Riparazioni in corso</h1>
+<br>
+{% for item in listariparazioniincorso%}
+<div class="shadowbox">
+    <table class="tab">
+            <td>
+                    <td>
+                        <div class="int">
+                            <p>Data: {{item.inizio}}</p>
+                            <p>{{item.descrizione}}</p>
+                        </div>
+                        <div class="int">
+                            <p>Mezzo: {{item.marca}} {{item.modello}}</p>
+                            <p>Proprietario: {{item.cognome}} {{item.nome}}</p>
+                        </div>
+                        <div class="int">
+                            <p>Costo: {{item.prezzo}} €</p>
+                        </div>
+            </td>
+            <td>
+              <form action="" method="post">
+                <input type="submit" name={{item._id}} value="Terminato!">
+              </form>
+            </td>
+    </table>
+</div>
+<br>
+{%endfor%}
 {%endblock %}
