--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,23 @@
 body{
   background-color: white;
 }
+.shadowbox p{
+  margin: 1px;
+}
+.shadowbox {
+  text-align: left;
+  width: 40%;
+  border: 1px solid #333;
+  box-shadow: 8px 8px 5px #444;
+  padding: 5px 5px;
+  border-radius: 10px;
+}
+.int {
+  width: 100%;
+  text-align: left;
+  padding: 5px 5px;
+}
+.tab {
+  text-align: center;
+  width: 100%;
+}
