--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 {% block pagecontent %}
 <h1>Pagina Home/ login</h1>
 <form class="" action="" method="post">
-  <input type="text" name="n" value="n">
-  <input type="submit" name="sub" value="">
+  <input type="password" name="n" value="meccanico">
+  <input type="submit" name="sub" value="ok">
 </form>
 <p>Fiji non sa programmare</p>
 <p>{{frase}}</p>
