--- a/static/style.css
+++ b/static/style.css
@@ -5,10 +5,19 @@ body{
   margin: 1px;
 }
 .shadowbox {
+  width: 60%;
   text-align: left;
-  width: 40%;
   border: 1px solid #333;
-  box-shadow: 8px 8px 5px #444;
+  box-shadow: 3px 3px 3px #444;
+  padding: 5px 5px;
+  border-radius: 10px;
+}
+.shadowbox-center {
+  width: 60%;
+  text-align: center;
+  align: center;
+  border: 1px solid #333;
+  box-shadow: 3px 3px 3px #444;
   padding: 5px 5px;
   border-radius: 10px;
 }
@@ -20,4 +29,7 @@ body{
 .tab {
   text-align: center;
   width: 100%;
+}
+.error {
+  color: red;
 }
